--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,10 +1,16 @@
+
+/*Styler bodyen*/
 body {
     background: linear-gradient(to right,rgba(201,255,191,0),rgba(225,175,189,0.8));
 
 }
+
+/*feilmedlingen får rødt skrift*/
 .feilmelding{
     color: red;
 }
+
+/*styler container*/
 .container{
     width: 75%;
     background: #ffffff;
@@ -14,10 +20,11 @@ body {
     padding: 20px 40px 50px;
 }
 
+/*legger til margin*/
 h1{
     margin-bottom: 30px;
 }
-
+/*legger til margin på div boksen*/
 .div{
     margin: 40px;
 }
